src/program/snapshots/quil__program__graph__tests__graph__multiple_classical_instructions.snap
---
source: quil/src/program/graph.rs
expression: "ProgramDebugWrapper{program: &scheduled_program,}"

---
digraph {
	entry [label="Entry Point"]
	entry -> "block_0_start"
	subgraph "cluster_block_0" {
		label="block_0"
		node [ style="filled" ]
		"block_0_start" [ label=start, shape=circle ]
		"block_0_start" -> "block_0_0" [ label="ordering" ]
		"block_0_0" [label="MOVE ro[0] 1"]
		"block_0_0" -> "block_0_1" [ label="await write
ordering" ]
		"block_0_1" [label="MOVE ro[1] 0"]
		"block_0_1" -> "block_0_2" [ label="await write
ordering" ]
		"block_0_2" [label="ADD ro[0] 5"]
		"block_0_2" -> "block_0_3" [ label="await write
ordering" ]
		"block_0_3" [label="SUB ro[1] ro[0]"]
		"block_0_3" -> "block_0_end" [ label="await read
await write
ordering" ]
		"block_0_end" [ label=end, shape=circle ]
	}
}

