src/program/snapshots/quil__program__graph__tests__graph__parametric_pulses_using_capture_results.snap
---
source: quil/src/program/graph.rs
expression: "ProgramDebugWrapper{program: &scheduled_program,}"

---
digraph {
	entry [label="Entry Point"]
	entry -> "block_0_start"
	subgraph "cluster_block_0" {
		label="block_0"
		node [ style="filled" ]
		"block_0_start" [ label=start, shape=circle ]
		"block_0_start" -> "block_0_0" [ label="immediate" ]
		"block_0_start" -> "block_0_end" [ label="immediate" ]
		"block_0_0" [label="CAPTURE 0 \"ro_rx\" test(a: param[0]) ro[0]"]
		"block_0_0" -> "block_0_1" [ label="await capture" ]
		"block_0_0" -> "block_0_2" [ label="await capture" ]
		"block_0_0" -> "block_0_3" [ label="await capture" ]
		"block_0_0" -> "block_0_end" [ label="await read" ]
		"block_0_1" [label="NONBLOCKING PULSE 0 \"rf\" test(a: ro[0])"]
		"block_0_1" -> "block_0_3" [ label="await read" ]
		"block_0_1" -> "block_0_end" [ label="await read" ]
		"block_0_2" [label="NONBLOCKING PULSE 1 \"rf\" test(a: ro[0])"]
		"block_0_2" -> "block_0_3" [ label="await read" ]
		"block_0_2" -> "block_0_end" [ label="await read" ]
		"block_0_3" [label="CAPTURE 0 \"ro_rx\" test(a: param[0]) ro[0]"]
		"block_0_3" -> "block_0_4" [ label="await capture" ]
		"block_0_3" -> "block_0_5" [ label="await capture" ]
		"block_0_3" -> "block_0_end" [ label="await capture" ]
		"block_0_4" [label="NONBLOCKING PULSE 0 \"rf\" test(a: ro[0])"]
		"block_0_4" -> "block_0_end" [ label="await read" ]
		"block_0_5" [label="NONBLOCKING PULSE 1 \"rf\" test(a: ro[0])"]
		"block_0_5" -> "block_0_end" [ label="await read" ]
		"block_0_end" [ label=end, shape=circle ]
	}
}

